--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ scipy==1.5.0
 tensorboard==2.3.0
 tensorboardX==2.0
 tensorflow==2.3.1
+numpy==1.18.5
 torch==1.4.0
 torchvision==0.5.0
 tqdm==4.47.0
