--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,44 @@
-absl-py==0.9.0
+absl-py==0.11.0
 astunparse==1.6.3
-cachetools==4.1.1
-certifi==2018.1.18
-chardet==3.0.4
-flake8==3.8.4
+cachetools==4.2.1
+certifi==2020.12.5
+chardet==4.0.0
+dataclasses==0.8
+flatbuffers==1.12
 gast==0.3.3
-google-auth==1.23.0
+google-auth==1.24.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
-grpcio==1.33.2
+grpcio==1.32.0
 h5py==2.10.0
-idna==2.6
-importlib-metadata==2.0.0
+idna==2.10
+importlib-metadata==3.4.0
 Keras-Preprocessing==1.1.2
 lmdb==1.0.0
 Markdown==3.3.3
-mccabe==0.6.1
-numpy==1.18.5
+numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
-Pillow==8.0.1
-protobuf==3.13.0
+Pillow==8.1.0
+protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.6.0
-pyflakes==2.2.0
-pygobject==3.26.1
-python-apt==1.6.5+ubuntu0.3
-requests==2.24.0
+requests==2.25.1
 requests-oauthlib==1.3.0
-rsa==4.6
-scipy==1.5.0
-six==1.12.0
-ssh-import-id==5.7
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorboardX==2.0
-tensorflow==2.3.1
-tensorflow-estimator==2.3.0
+rsa==4.7
+scipy==1.5.4
+six==1.15.0
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorboardX==2.1
+tensorflow==2.4.0
+tensorflow-estimator==2.4.0
 termcolor==1.1.0
-torch==1.4.0
-torchvision==0.5.0
-tqdm==4.47.0
-urllib3==1.22
+torch==1.7.1
+torchvision==0.8.2
+tqdm==4.56.0
+typing-extensions==3.7.4.3
+urllib3==1.26.3
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.4.0
