--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 absl-py
-h5py
 lmdb
 tqdm
 pytorch-gan-metrics
 tensorboard
 tensorboardX
-torch==1.9.1
-torchvision==0.10.1
+
+-f https://download.pytorch.org/whl/cu113/torch_stable.html
+torch==1.11.0+cu113
+torchvision==0.12.0+cu113
