--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-absl-py
+click
 lmdb
-tqdm
 pytorch-gan-metrics
+tqdm
 tensorboard
 tensorboardX
-
--f https://download.pytorch.org/whl/cu113/torch_stable.html
-torch==1.11.0+cu113
-torchvision==0.12.0+cu113
+torch==1.11.0
+torchvision==0.12.0
