--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ pytorch-gan-metrics
 tqdm
 tensorboard
 tensorboardX
+
+--index-url https://download.pytorch.org/whl/cu113
 torch==1.11.0
 torchvision==0.12.0
