--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ tqdm
 tensorboard
 tensorboardX
 
---index-url https://download.pytorch.org/whl/cu113
+--extra-index-url https://download.pytorch.org/whl/cu113
 torch==1.11.0
 torchvision==0.12.0
